--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,9 +1,63 @@
-#content {
-  margin-left: auto;
-  margin-right: auto;
-  width: 650px;
+h1, h2{
+	font-family: 'Space Mono' , monospace;
+	
+}
+img{
+	margin:20px;
+	height: 200px;
 }
 
-#greeting-container {
-  margin-top: 20px;
+.container{
+	margin-top: 80px;
+	padding: 20px;
+	
+}
+
+.email, .button2, .action_btn{
+	border: none;
+	background-color: black;
+  color: white;
+  padding: 10px 70px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 12px;
+  margin-top: 0px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+p{
+	font-size: 15px;
+	font-family: 'Martel Sans', sans-serif;
+	padding: 20px 80px;
+	line-height: 30px;
+}
+
+ button.button2 {
+ 	text-align: center;
+font-size: 12px;
+width: 200px;
+margin: 0 auto;
+display: inline;}
+
+ button.action_btn {
+width: 200px;
+margin: 0 auto;
+display: inline;}
+
+#socials{
+	margin-top: 50px;
+}
+#experience{
+	text-align: left;
+}
+#education{
+	text-align: left;
+}
+
+ul{
+	margin: 10px;
+	text-align: center;
+	font-size: 16px;
 }
